//
//  Strings.swift
//  ClinicalLab(Driver)
//
//  Created by Vaibhav Rajani on 4/28/24.
//

import Foundation

struct Strings {
    static let phoneNumberPlaceholder = "Enter Phone Number"
    static let passwordPlaceholder = "Enter Password"
    static let confirmPasswordPlaceholder = "Confirm Password"
    static let loginButtonTitle = "Login"
    static let signUpPrompt = "Don't have an account? Sign Up"
    static let loginFailedError = "Login failed. Please try again."
    static let phoneNumberLabel = "Phone No:"
    static let passwordLabel = "Password:"
    static let signupButtonTitle = "Sign Up"
    static let signoutButtonTitle = "Sign Out"
    static let fetchRouteDetails = "Fetching route details..."
    static let unableToFetchDetails = "Unable to fetch map details."
    static let securityTitle = "Security"
    static let useBiometrics = "Use Biometrics"
    static let changePasswordTitle = "Change Password"
    static let settingsTitle = "Settings"
    static let passwordsDontMatch = "Passwords do not match"
    static let passwordUpdated = "Password successfully updated."
    static let identifyYourself = "Identify yourself!"
}
