...
                        
                    }
                }
            }
            .navigationBarBackButtonHidden(true)
            .navigationTitle("")
            .accessibility(identifier: "RoutesViewIdentifier")
            .navigationBarItems(
                trailing: HStack{
//                    NavigationLink(
//                        destination: LoginView(viewModel: LoginViewModel(loginService: LoginService())),
//                        isActive: $showingLogin
//                    ) {
...
                    }
                    .foregroundColor(.red)
                    .accessibility(identifier: "SignOutButton")
                    Button(action: {
                        showingSettings = true
                    }) {
                        Image(systemName: "gear")
                            .foregroundColor(.white)
                    }}
                    .accessibility(identifier: "SettingsButton")
            )
            .sheet(isPresented: $showingSettings) {
                SettingsView()
...
