...
                    updatePassword()
                }
            }
        }
        .navigationBarTitle(Strings.settingsTitle, displayMode: .large)
        .alert(isPresented: $showAlert) {
            Alert(title: Text("Password Update"), message: Text(alertMessage), dismissButton: .default(Text("OK")))
        }
    }
    
    private func updatePassword() {
        guard newPassword == confirmPassword else {
            alertMessage = Strings.passwordsDontMatch
...
